Correct alignments in dialog box content in rtl

--- a/modules/wizard/css/wizard.css
+++ b/modules/wizard/css/wizard.css
@@ -1074,15 +1074,23 @@ textarea.field-in-error,
 	font-size: 20px;
 	vertical-align: middle;
 	text-align: center;
-	margin: 0 5px 3px 0;
+	margin: 0 5px 5px 0;
 	transition: color 0.1s ease-in;
+}
+.rtl .ui-dialog-title::before{
+	margin-right: 0;
+	margin-left: 5px;
 }
 .ui-dialog-content img{
 	margin: 0 5px 0 0;
 }
 .pll-wizard .ui-dialog ul{
 	list-style: disc;
-	padding-left: 10px;
+	padding-left: 20px;
+}
+.rtl.pll-wizard .ui-dialog ul{
+	padding-left: 0;
+	padding-right: 20px;
 }
 .pll-wizard li{
 	margin-bottom: 0;
